Done changes in files and uploaded.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OnLoad 3.0</title>
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -26,14 +26,17 @@
 <main class="my-auto">
     <div class="container">
         <h1 class="page-title">We are Coming Soon....</h1>
-        <p class="page-description">An intense, fun-filled, rewarding convergence of programmers, designers and developers to build something amazing
+        <p class="page-description">An intense, fun-filled, rewarding convergence of programmers, designers and
+            developers to build something amazing
         </p>
         <p class="connected">Stay connected</p>
         <nav class="footer-social-links">
-            <a href="https://www.facebook.com/hackOnLoad" class="social-link" target="_blank"><i class="mdi mdi-facebook-box"></i></a>
+            <a href="https://www.facebook.com/hackOnLoad" class="social-link" target="_blank"><i
+                    class="mdi mdi-facebook-box"></i></a>
             <a href="https://twitter.com/hackOnLoad" class="social-link" target="_blank"><i class="mdi mdi-twitter"></i></a>
             <a href="https://t.me/HackOnLoad" class="social-link" target="_blank"><i class="mdi mdi-telegram"></i></a>
-            <a href="https://www.linkedin.com/company/hackonload/" class="social-link" target="_blank"><i class="mdi mdi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/hackonload/" class="social-link" target="_blank"><i
+                    class="mdi mdi-linkedin"></i></a>
 
         </nav>
     </div>
